--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Calculator</string>
     <string name="calculator">Calculator</string>
+    <string name="div_error">Cannot divide by 0!</string>
+    <string name="type_error">Input must be an integer!</string>
 </resources>
